--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -1,17 +1,22 @@
-body{
+body {
     margin: 0;
     padding: 0;
 }
+
 .post {
-    background-color:#c4e3c9;
+    min-width: 7rem;
+    min-height: 4rem;
+    background-color: #c4e3c9;
     display: flex;
     flex-direction: column;
     border: 0 solid gray;
     border-radius: 8px;
     margin: 1rem;
     padding: 1rem;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    animation: animate-in 1s ease-out forwards;
 }
+
 .auther {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -20,9 +25,22 @@ body{
     font-weight: bold;
     text-transform: uppercase;
 }
+
 .text {
     margin: 0.25rem 0 0 0;
     font-style: italic;
-    color:#3a800e;
+    color: #3a800e;
     white-space: pre-wrap;
+}
+
+@keyframes animate-in {
+    from {
+        opacity: 0;
+        transform: translateY(1rem);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
