--- a/src/components/NewPost.module.css
+++ b/src/components/NewPost.module.css
@@ -22,6 +22,29 @@
     border: none;
     background-color: #7ebc85;
     color: rgb(220, 240, 228);
-
-
+}
+.buttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 0.5rem;
+}
+.buttons button[type=button] {
+    padding: 0.5rem 1.5rem;
+    border:none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #51a460;
+}
+.buttons button[type=button]:hover{
+    background-color: transparent;
+}
+.buttons button[type=submit]{
+    padding: 0.5rem 1.5rem;
+    border:none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #7EBC85;
+}
+.buttons button[type=submit]:hover{
+    background-color: #94f6a6;
 }
